(fix): Reducing the vertical spacing in the pages

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -28,12 +28,12 @@
 }
 
 .archive .page__title {
-  margin-bottom: 1.25em;
+  margin-bottom: 1.2em;
 }
 
 /* Headings inside archive pages (e.g., Publications sections) */
 .archive h2 {
-  margin-top: 1.5em;
+  margin-top: 1.1em;
   margin-bottom: 0.85em;
   padding-bottom: 0.5em;
   border-bottom: 1px solid $border-color;
